--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -36,7 +36,7 @@
                 android:text="Order Details"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_13sdp"
-                app:fontFamily="@font/poppins_medium" />
+                app:fontFamily="@font/roboto_medium" />
 
         </LinearLayout>
 
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_4sdp"
                 android:layout_marginTop="@dimen/_15sdp"
-                android:fontFamily="@font/poppins_medium"
+                android:fontFamily="@font/roboto_medium"
                 android:text="Products:"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_13sdp" />
@@ -238,7 +238,7 @@
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_12sdp"
                 android:background="@drawable/item_border"
-                android:fontFamily="@font/poppins_medium"
+                android:fontFamily="@font/roboto_medium"
                 android:paddingLeft="@dimen/_6sdp"
                 android:paddingTop="@dimen/_3sdp"
                 android:paddingRight="@dimen/_6sdp"
@@ -274,7 +274,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_4sdp"
                 android:layout_marginTop="@dimen/_8sdp"
-                android:fontFamily="@font/poppins_medium"
+                android:fontFamily="@font/roboto_medium"
                 android:text="Payment Method:"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_13sdp" />
@@ -301,7 +301,7 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_38sdp"
             android:layout_centerInParent="true"
-            android:fontFamily="@font/poppins_medium"
+            android:fontFamily="@font/roboto_medium"
             android:gravity="center"
             android:text="Confirm Order"
             android:textColor="@color/white"
