--- a/app/src/main/res/layout/city_list_item.xml
+++ b/app/src/main/res/layout/city_list_item.xml
@@ -29,7 +29,7 @@
             android:id="@+id/cityNameTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins"
+            android:fontFamily="@font/roboto"
             android:paddingLeft="@dimen/_15sdp"
             android:text="Hyderabad"
             android:textColor="@color/black"
