--- a/app/src/main/res/layout/dialog_add_dialog.xml
+++ b/app/src/main/res/layout/dialog_add_dialog.xml
@@ -48,7 +48,7 @@
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
                     android:textSize="@dimen/_12sdp"
-                    app:fontFamily="@font/poppins" />
+                    app:fontFamily="@font/roboto" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,7 +71,7 @@
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
                     android:textSize="@dimen/_12sdp"
-                    app:fontFamily="@font/poppins" />
+                    app:fontFamily="@font/roboto" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -93,7 +93,7 @@
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
                     android:textSize="@dimen/_12sdp"
-                    app:fontFamily="@font/poppins" />
+                    app:fontFamily="@font/roboto" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -124,7 +124,7 @@
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
                     android:textSize="@dimen/_12sdp"
-                    app:fontFamily="@font/poppins" />
+                    app:fontFamily="@font/roboto" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -144,7 +144,7 @@
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
                     android:textSize="@dimen/_12sdp"
-                    app:fontFamily="@font/poppins" />
+                    app:fontFamily="@font/roboto" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -168,7 +168,7 @@
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
                     android:textSize="@dimen/_12sdp"
-                    app:fontFamily="@font/poppins" />
+                    app:fontFamily="@font/roboto" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
