--- a/app/src/main/res/layout/dialog_coupon.xml
+++ b/app/src/main/res/layout/dialog_coupon.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
-            android:fontFamily="@font/poppins_medium"
+            android:fontFamily="@font/roboto_medium"
             android:gravity="center"
             android:text="Enter/Select Coupon Code"
             android:textColor="@color/black"
@@ -54,7 +54,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:textSize="@dimen/_12sdp"
-                app:fontFamily="@font/poppins" />
+                app:fontFamily="@font/roboto" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
