--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -36,7 +36,7 @@
                 android:text="Cart"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_13sdp"
-                app:fontFamily="@font/poppins_medium" />
+                app:fontFamily="@font/roboto_medium" />
 
         </LinearLayout>
 
@@ -101,7 +101,7 @@
         android:layout_below="@+id/topLayout"
         android:layout_marginLeft="@dimen/_8sdp"
         android:layout_marginRight="@dimen/_8sdp"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/roboto_medium"
         android:gravity="center"
         android:text="No items in cart"
         android:textSize="@dimen/_12sdp"
@@ -114,7 +114,7 @@
         android:layout_height="@dimen/_38sdp"
         android:layout_alignParentBottom="true"
         android:background="#17435C"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/roboto_medium"
         android:gravity="center"
         android:text="Checkout"
         android:textColor="@color/white"
