--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -43,7 +43,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:textSize="@dimen/_12sdp"
-                app:fontFamily="@font/poppins" />
+                app:fontFamily="@font/roboto" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -65,7 +65,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:textSize="@dimen/_12sdp"
-                app:fontFamily="@font/poppins" />
+                app:fontFamily="@font/roboto" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -86,7 +86,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:textSize="@dimen/_12sdp"
-                app:fontFamily="@font/poppins" />
+                app:fontFamily="@font/roboto" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -108,7 +108,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:textSize="@dimen/_12sdp"
-                app:fontFamily="@font/poppins" />
+                app:fontFamily="@font/roboto" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -127,7 +127,7 @@
             android:text="Update"
             android:textColor="@color/white"
             android:textSize="@dimen/_12sdp"
-            app:fontFamily="@font/poppins_medium" />
+            app:fontFamily="@font/roboto_medium" />
 
     </LinearLayout>
 
