--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -42,7 +42,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:textSize="@dimen/_12sdp"
-                app:fontFamily="@font/poppins" />
+                app:fontFamily="@font/roboto" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -61,7 +61,7 @@
             android:text="SUBMIT"
             android:textColor="@color/white"
             android:textSize="@dimen/_12sdp"
-            app:fontFamily="@font/poppins_medium" />
+            app:fontFamily="@font/roboto_medium" />
 
     </LinearLayout>
 
