--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:textSize="@dimen/_12sdp"
-                app:fontFamily="@font/poppins" />
+                app:fontFamily="@font/roboto" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -75,7 +75,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:textSize="@dimen/_12sdp"
-                app:fontFamily="@font/poppins" />
+                app:fontFamily="@font/roboto" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -93,7 +93,7 @@
             android:textColor="@color/green"
             android:textSize="@dimen/_12sdp"
             android:textStyle="italic"
-            app:fontFamily="@font/poppins" />
+            app:fontFamily="@font/roboto" />
 
 
         <TextView
@@ -111,7 +111,7 @@
             android:text="Login"
             android:textColor="@color/white"
             android:textSize="@dimen/_12sdp"
-            app:fontFamily="@font/poppins_medium" />
+            app:fontFamily="@font/roboto_medium" />
 
 
     </LinearLayout>
@@ -157,7 +157,7 @@
         android:text="Dont have an account ? Signup"
         android:textColor="@color/black"
         android:textSize="@dimen/_12sdp"
-        app:fontFamily="@font/poppins_medium" />
+        app:fontFamily="@font/roboto_medium" />
 
 
 </RelativeLayout>
