--- a/app/src/main/res/layout/activity_order_history.xml
+++ b/app/src/main/res/layout/activity_order_history.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/_6sdp"
-                android:fontFamily="@font/poppins_medium"
+                android:fontFamily="@font/roboto_medium"
                 android:gravity="center_vertical"
                 android:text="My Orders"
                 android:textColor="@color/black"
