--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -41,7 +41,7 @@
                     android:text="Shipping Details"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_13sdp"
-                    app:fontFamily="@font/poppins_medium" />
+                    app:fontFamily="@font/roboto_medium" />
 
             </LinearLayout>
 
@@ -56,7 +56,7 @@
             android:layout_marginRight="@dimen/_8sdp"
             android:background="@drawable/item_border"
             android:drawableRight="@drawable/plus"
-            android:fontFamily="@font/poppins_medium"
+            android:fontFamily="@font/roboto_medium"
             android:gravity="center_vertical"
             android:paddingLeft="@dimen/_12sdp"
             android:paddingTop="@dimen/_6sdp"
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_12sdp"
             android:layout_marginTop="@dimen/_10sdp"
-            android:fontFamily="@font/poppins_medium"
+            android:fontFamily="@font/roboto_medium"
             android:text="Select shipping address:"
             android:textColor="@color/black"
             android:textSize="@dimen/_12sdp" />
@@ -91,7 +91,7 @@
         android:layout_height="@dimen/_38sdp"
         android:layout_alignParentBottom="true"
         android:background="#17435C"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/roboto_medium"
         android:gravity="center"
         android:text="Payment"
         android:textColor="@color/white"
