--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:ellipsize="end"
-                android:fontFamily="@font/poppins"
+                android:fontFamily="@font/roboto"
                 android:gravity="center"
                 android:maxLines="1"
                 android:paddingRight="@dimen/_5sdp"
