--- a/app/src/main/res/layout/cart_products_list_item.xml
+++ b/app/src/main/res/layout/cart_products_list_item.xml
@@ -114,7 +114,7 @@
                             android:text="1 Offer Available >"
                             android:textColor="@color/green"
                             android:textSize="@dimen/_10sdp"
-                            app:fontFamily="@font/poppins_medium" />
+                            app:fontFamily="@font/roboto_medium" />
 
                     </LinearLayout>
 
