--- a/app/src/main/res/layout/dialog_cities.xml
+++ b/app/src/main/res/layout/dialog_cities.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
-            android:fontFamily="@font/poppins_medium"
+            android:fontFamily="@font/roboto_medium"
             android:gravity="center"
             android:text="Select your city"
             android:textColor="@color/black"
