--- a/app/src/main/res/layout/order_products_item.xml
+++ b/app/src/main/res/layout/order_products_item.xml
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_2sdp"
                 android:layout_marginRight="@dimen/_2sdp"
-                android:fontFamily="@font/poppins_medium"
+                android:fontFamily="@font/roboto_medium"
                 android:maxLines="2"
                 android:paddingLeft="@dimen/_3sdp"
                 android:text="Freedom Refined Sunflower"
@@ -51,7 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/_2sdp"
-                    android:fontFamily="@font/poppins"
+                    android:fontFamily="@font/roboto"
                     android:gravity="left|center_vertical"
                     android:paddingLeft="@dimen/_3sdp"
                     android:text="₹350"
