--- a/app/src/main/res/layout/payments_item.xml
+++ b/app/src/main/res/layout/payments_item.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/paymentTypeRadioButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins"
+                android:fontFamily="@font/roboto"
                 android:paddingLeft="@dimen/_6sdp"
                 android:text=""
                 android:textSize="@dimen/_12sdp" />
