--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -7,6 +7,7 @@
         <item>@font/quicksand</item>
         <item>@font/quicksand_medium</item>
         <item>@font/roboto</item>
+        <item>@font/roboto_medium</item>
         <item>@font/yatra_one</item>
     </array>
 </resources>
