Home api integrated

--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -37,27 +37,27 @@
             android:orientation="horizontal">
 
             <RelativeLayout
-                android:layout_width="@dimen/_28sdp"
-                android:layout_height="@dimen/_28sdp"
+                android:layout_width="@dimen/_26sdp"
+                android:layout_height="@dimen/_26sdp"
                 android:layout_marginRight="@dimen/_10sdp"
                 android:gravity="center_vertical">
 
                 <ImageView
-                    android:layout_width="@dimen/_17sdp"
-                    android:layout_height="@dimen/_17sdp"
+                    android:layout_width="@dimen/_16sdp"
+                    android:layout_height="@dimen/_16sdp"
                     android:layout_marginTop="@dimen/_3sdp"
                     android:src="@drawable/ic_fav" />
 
                 <ImageView
-                    android:layout_width="@dimen/_12sdp"
-                    android:layout_height="@dimen/_12sdp"
+                    android:layout_width="@dimen/_11sdp"
+                    android:layout_height="@dimen/_11sdp"
                     android:layout_alignParentRight="true"
                     android:layout_marginLeft="-5dp"
                     android:src="@drawable/circle_filled_green" />
 
                 <TextView
-                    android:layout_width="@dimen/_12sdp"
-                    android:layout_height="@dimen/_12sdp"
+                    android:layout_width="@dimen/_11sdp"
+                    android:layout_height="@dimen/_11sdp"
                     android:layout_alignParentRight="true"
                     android:gravity="center"
                     android:text="0"
@@ -69,27 +69,27 @@
 
             <RelativeLayout
                 android:id="@+id/cartLayout"
-                android:layout_width="@dimen/_28sdp"
-                android:layout_height="@dimen/_28sdp"
+                android:layout_width="@dimen/_26sdp"
+                android:layout_height="@dimen/_26sdp"
                 android:gravity="center_vertical">
 
                 <ImageView
-                    android:layout_width="@dimen/_18sdp"
-                    android:layout_height="@dimen/_18sdp"
+                    android:layout_width="@dimen/_16sdp"
+                    android:layout_height="@dimen/_16sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:src="@drawable/ic_cart" />
 
                 <ImageView
-                    android:layout_width="@dimen/_12sdp"
-                    android:layout_height="@dimen/_12sdp"
+                    android:layout_width="@dimen/_11sdp"
+                    android:layout_height="@dimen/_11sdp"
                     android:layout_alignParentRight="true"
                     android:layout_marginLeft="-5dp"
                     android:src="@drawable/circle_filled_green" />
 
                 <TextView
                     android:id="@+id/cartCountTextView"
-                    android:layout_width="@dimen/_12sdp"
-                    android:layout_height="@dimen/_12sdp"
+                    android:layout_width="@dimen/_11sdp"
+                    android:layout_height="@dimen/_11sdp"
                     android:layout_alignParentRight="true"
                     android:gravity="center"
                     android:textColor="@color/white"
@@ -149,8 +149,7 @@
                             android:gravity="center"
                             android:textColor="@color/black"
                             android:textSize="@dimen/_13sdp"
-                            android:textStyle="bold"
-                            app:fontFamily="@font/quicksand_medium" />
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
@@ -158,24 +157,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:visibility="gone">
+                        android:visibility="visible">
 
                         <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="MRP"
-                            android:textColor="@color/grey"
-                            android:textSize="@dimen/_11sdp"
-                            app:fontFamily="@font/roboto_medium" />
-
-                        <TextView
+                            android:id="@+id/productOriginalPriceTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/_2sdp"
                             android:background="@drawable/strike_through"
                             android:gravity="center"
-                            android:text="₹420"
                             android:textColor="@color/grey"
                             android:textSize="@dimen/_11sdp"
                             app:fontFamily="@font/roboto_medium" />
@@ -343,39 +333,48 @@
 
            -->
 
-            <TextView
+            <LinearLayout
+                android:id="@+id/similarProductsLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_15sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:text="Similar Products"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_13sdp"
-                app:fontFamily="@font/roboto_medium" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/similarProductsRecyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_10sdp"
-                    android:layout_marginRight="@dimen/_10sdp"></androidx.recyclerview.widget.RecyclerView>
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <TextView
-                    android:id="@+id/noSimilarProductsTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_40sdp"
-                    android:gravity="center"
-                    android:text="No Similar products available"
-                    android:textSize="@dimen/_12sdp"
-                    android:textStyle="italic"
-                    android:visibility="gone" />
+                    android:layout_marginLeft="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:text="Similar Products"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_13sdp"
+                    app:fontFamily="@font/roboto_medium" />
 
-            </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/similarProductsRecyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:layout_marginRight="@dimen/_10sdp"></androidx.recyclerview.widget.RecyclerView>
+
+                    <TextView
+                        android:id="@+id/noSimilarProductsTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_40sdp"
+                        android:gravity="center"
+                        android:text="No Similar products available"
+                        android:textSize="@dimen/_12sdp"
+                        android:textStyle="italic"
+                        android:visibility="gone" />
+
+                </RelativeLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
 
