--- a/app/src/main/res/layout/offer_products_list_item.xml
+++ b/app/src/main/res/layout/offer_products_list_item.xml
@@ -66,8 +66,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_1sdp"
             android:layout_marginLeft="@dimen/_10sdp"
-            android:layout_marginRight="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_2sdp"
+            android:layout_marginRight="@dimen/_10sdp"
             android:background="@drawable/strike_through"></View>
 
         <TextView
@@ -84,9 +84,29 @@
             android:textSize="@dimen/_11sdp" />
 
         <RelativeLayout
+            android:id="@+id/optionsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_3sdp"
+            android:layout_marginRight="@dimen/_8sdp"
+            android:background="@drawable/item_border">
+
+            <Spinner
+                android:id="@+id/optionsSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="0dp"
+                android:padding="@dimen/_5sdp" />
+
+        </RelativeLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_3sdp"
             android:orientation="horizontal">
 
             <TextView
@@ -104,22 +124,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/_2sdp"
+                android:layout_marginLeft="@dimen/_5sdp"
                 android:background="@drawable/strike_through"
                 android:gravity="center|right"
                 android:paddingLeft="@dimen/_3sdp"
                 android:text="₹420"
-                android:textSize="@dimen/_10sdp"
-                android:visibility="gone" />
+                android:textSize="@dimen/_10sdp" />
 
-        </RelativeLayout>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/addTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_gravity="right"
             android:layout_marginTop="@dimen/_4sdp"
+            android:layout_marginRight="@dimen/_5sdp"
             android:background="@drawable/green_square_rounded"
             android:gravity="center"
             android:paddingLeft="@dimen/_13sdp"
